# synevi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  failed.txt  foo.ts  result.txt
accord/: Cargo.toml  build.rs
accord/src/: accord.rs  lib.rs
accord/src/protos/: accord.proto
benches/: Cargo.toml  performance.rs
core/: Cargo.toml
core/src/: main.rs
crates/consensus/: Cargo.toml
crates/consensus/benches/: performance.rs
crates/consensus/src/: coordinator.rs  error.rs  event_store.rs  lib.rs  node.rs  reorder_buffer.rs  replica.rs  utils.rs  wait_handler.rs
crates/consensus_transport/: Cargo.toml  build.rs
crates/consensus_transport/src/: configure_transport.rs  consensus_transport.rs  error.rs  latency_service.rs  lib.rs  network.rs  replica.rs  utils.rs
crates/consensus_transport/src/protos/: configure_transport.proto  consensus_transport.proto
crates/monoclock/: Cargo.toml
crates/monoclock/src/: lib.rs
crates/monotime/: Cargo.toml
crates/monotime/src/: error.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/synevi/: Cargo.toml
crates/synevi_consensus/: Cargo.toml
crates/synevi_consensus/src/: coordinator.rs  event_store.rs  lib.rs  node.rs  reorder_buffer.rs  replica.rs  utils.rs  wait_handler.rs
crates/synevi_core/: Cargo.toml
crates/synevi_core/src/: coordinator.rs  error.rs  event_store.rs  lib.rs  node.rs  reorder_buffer.rs  replica.rs  utils.rs  wait_handler.rs
crates/synevi_kv/: Cargo.toml
crates/synevi_kv/src/: error.rs  kv_store.rs  lib.rs  utils.rs
crates/synevi_network/: Cargo.toml
crates/synevi_network/src/: configure_transport.rs  consensus_transport.rs  latency_service.rs  lib.rs  network.rs  replica.rs  utils.rs
crates/synevi_network/src/protos/: configure_transport.proto  consensus_transport.proto
crates/synevi_persistence/: Cargo.toml
crates/synevi_persistence/src/: database.rs  event.rs  event_store.rs  lib.rs  rocks_db.rs
crates/synevi_types/: Cargo.toml
crates/synevi_types/src/: error.rs  lib.rs  traits.rs  types.rs
docs/: architecture.md  reconfiguration.md  recovery.md
monotime/src/: lib.rs
synevi/: Cargo.toml
synevi/src/: lib.rs
synevi_core/: Cargo.toml
synevi_core/src/: coordinator.rs  lib.rs  node.rs  reorder_buffer.rs  replica.rs  utils.rs  wait_handler.rs
synevi_kv/: Cargo.toml
synevi_kv/src/: error.rs  kv_store.rs
synevi_network/: Cargo.toml  build.rs
synevi_network/src/: configure_transport.rs  consensus_transport.rs  latency_service.rs  lib.rs  network.rs  reconfiguration.rs  replica.rs  replica_buffer.rs  utils.rs
synevi_network/src/protos/: configure_transport.proto  consensus_transport.proto
synevi_persistence/: Cargo.toml
synevi_persistence/src/: database.rs  event.rs  event_store.rs  lib.rs  lmdb_store.rs  mem_store.rs  redb_store.rs  wait_handler.rs
synevi_types/: Cargo.toml
synevi_types/src/: error.rs  traits.rs  types.rs
tests/: Cargo.toml  README.md  consensus_e2e.rs
tests/maelstrom/: echo.rs  lin_kv.rs  maelstrom_config.rs  maelstrom_server.rs  messages.rs  network.rs  protocol.rs
