[workspace]
members = ["monotime", "synevi", "synevi_*", "tests", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "A leaderless, consensus library based on Apache Cassandra's Accord algorithm"
edition = "2021"
authors = [
    "Sebastian Beyvers <sb@pus.de>",
    "Jannis Hochmuth <jannis.hochmuth@cb.jlug.de>",
    "Lukas Brehm <lukas.brehm@cb.jlug.de>",
]
repository = "https://github.com/ArunaStorage/synevi"
license = "MIT OR Apache-2.0"
keywords = ["consensus", "distributed", "leaderless", "cassandra", "accord"]

[workspace.dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
ahash = "0.8.11"
bytes = "1.7.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16" 
tonic = "0.12.2"
tracing = "0.1.40"
ulid = { version = "1.1.3", features = ["serde"] }
async-trait = "0.1.82"
rand = "0.8.5"
async-channel = "2.3.1"
heed = "0.20.5"

[profile.release]
debug = true
