[package]
name = "synevi_benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
synevi_core = { path = "../crates/synevi_core" }
synevi_network = { path = "../crates/synevi_network" }
synevi_persistence = { path = "../crates/synevi_persistence" }
monotime = { path = "../crates/monotime" }
anyhow = { workspace = true }
bytes = "1.6.0"
chrono = "0.4.38"
diesel-ulid = { workspace = true }
futures = "0.3.30"
rusty_ulid = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "performance"
path = "./performance.rs" # The source file of the target.
harness = false
