[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
accord = { path = "../accord" }
chrono = "0.4.38"
rocksdb = "0.22.0"
tonic = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}