[package]
name = "synevi_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
synevi_types = { path = "../synevi_types", version = "0.1.0" }
synevi_network = { path = "../synevi_network", version = "0.1.0" }
synevi_persistence = { path = "../synevi_persistence", version = "0.1.0" }
monotime = { path = "../monotime", version = "0.1.0" }
tokio-stream = {workspace = true}
bytes = { workspace = true }
chrono = "0.4.38"
ulid = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
async-trait = { workspace = true }
thiserror = { workspace = true }
async-channel = "2.3.1"
ahash = { workspace = true }
sha3 = "0.10.8"
postcard = {version = "1.0.10", features = ["use-std"]}

[dev-dependencies]
monotime = { path = "../monotime", features = ["unsafe_time"] }
