[package]
name = "synevi_kv"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "A key-value store example implementation for the synevi consensus library"

[dependencies]
ahash = {workspace = true}
synevi_network = { path = "../synevi_network", version = "0.1.0" }
synevi_persistence = {path = "../synevi_persistence", version = "0.1.0"}
synevi_core = {path = "../synevi_core", version = "0.1.0"}
synevi_types = {path = "../synevi_types", version = "0.1.0"}
async-trait = "0.1.80"
tokio = {workspace = true}
thiserror = "1.0.61"
serde ={workspace = true}
serde_json = {workspace = true}
ulid ={workspace = true}
