[package]
name = "synevi_network"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
prost = "0.13.3"
tokio = {workspace = true}
tokio-stream = {workspace = true}
futures-util = "0.3.30"
tonic = {workspace = true}
tonic-build = "0.12.0"
ulid = { workspace = true }
async-trait = {workspace = true}
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true}
synevi_types = { path = "../synevi_types", version = "0.1.0"}
ahash = {workspace = true}

[build-dependencies]
tonic-build = "0.12.3"
