[package]
name = "synevi_persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
monotime = { path = "../monotime", version = "0.1.0" }
synevi_types = { path = "../synevi_types", version = "0.1.0" }
bytes = { workspace = true }
tokio = { workspace = true }
heed = { workspace = true }
chrono = "0.4.38"
ulid = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
async-trait = { workspace = true }
thiserror = { workspace = true }
async-channel = "2.3.1"
ahash = { workspace = true }
bincode = "1.3.3"
redb = { version = "2.1.4" }
