[package]
name = "synevi_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
tags.workspace = true

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
monotime = { path = "../monotime", version = "0.1.0"}
chrono = "0.4.38"
ulid = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
async-trait = { workspace = true }
thiserror = { workspace = true }
async-channel = "2.3.1"
ahash = { workspace = true }
sha3 = "0.10.8"
heed = { workspace = true }
http = "1.1.0"