[package]
name = "synevi_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
synevi_consensus = { path = "../crates/synevi_consensus" }
synevi_network = { path = "../crates/synevi_network" }
monotime = { path = "../crates/monotime" }
anyhow = { workspace = true }
bytes = "1.6.0"
chrono = "0.4.38"
diesel-ulid = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = {workspace = true} 

[[test]]
name = "consensus_e2e"
path = "consensus_e2e.rs"
