[package]
name = "synevi_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
synevi_core = { path = "../crates/synevi_core" }
synevi_network = { path = "../crates/synevi_network" }
synevi_kv = { path = "../crates/synevi_kv" }
monotime = { path = "../crates/monotime" }
anyhow = { workspace = true }
async-trait = { workspace = true }
ahash = { workspace = true }
bytes = "1.6.0"
chrono = "0.4.38"
diesel-ulid = { workspace = true }
futures = "0.3.30"
lazy_static = "1.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[[test]]
name = "consensus_e2e"
path = "consensus_e2e.rs"


# [[bin]]
# name = "maelstrom_echo"
# path = "maelstrom/echo.rs"

# [[bin]]
# name = "maelstrom_lin_kv"
# path = "maelstrom/lin_kv.rs"
