[package]
name = "consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
consensus_transport = { path = "../consensus_transport" }
monotime = { path = "../monotime" }
anyhow = {workspace = true}
bytes = "1.6.0"
chrono = "0.4.38"
diesel-ulid = {workspace = true}
futures = "0.3.30"
rusty_ulid = "2.0.0"
serde = {workspace = true}
serde_json = {workspace = true}
tonic = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
rand = "0.8.5"
async-trait = {workspace = true}


[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio"] }
monotime = { path = "../monotime", features = ["unsafe_time"]}


[[bench]]
name = "performance"
harness = false