[package]
name = "consensus_transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = "0.12.6"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tonic = {workspace = true}
tonic-build = "0.11.0"


[build-dependencies]
tonic-build = "0.11.0"