[package]
name = "consensus_transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = "0.12.6"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tonic = {workspace = true}
anyhow = {workspace = true}
tonic-build = "0.11.0"
diesel-ulid = {workspace = true}
async-trait = {workspace = true}
tracing = { workspace = true }


[build-dependencies]
tonic-build = "0.11.0"