[package]
name = "monotime"
description = "A strictly monotonic timestamp handling library, ensures that timestamp.next() > timestamp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = {workspace = true}
anyhow = {workspace = true}
bytes = {workspace = true}

[build-dependencies]
tonic-build = "0.12.0"

[features]
unsafe_time = [] # This feature enables the intentional crafting of time values that may not be strictly monotonic