[package]
name = "synevi_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
synevi_network = { path = "../synevi_network" }
synevi_persistence = { path = "../synevi_persistence" }
synevi_types = { path = "../synevi_types" }
monotime = { path = "../monotime" }
bytes = { workspace = true }
chrono = "0.4.38"
diesel-ulid = { workspace = true }
futures = "0.3.30"
rusty_ulid = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
async-trait = { workspace = true }
thiserror = { workspace = true }
async-channel = "2.3.1"
ahash = { workspace = true }
sha3 = "0.10.8"

[dev-dependencies]
monotime = { path = "../monotime", features = ["unsafe_time"] }
