[package]
name = "synevi_kv"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = {workspace = true}
anyhow = { workspace = true}
diesel-ulid = { workspace = true}
synevi_network = { path = "../synevi_network" }
synevi_persistence = {path = "../synevi_persistence"}
synevi_consensus = {path = "../synevi_consensus"}
async-trait = "0.1.80"
tokio = {workspace = true}
