[package]
name = "synevi_kv"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = {workspace = true}
diesel-ulid = { workspace = true}
synevi_network = { path = "../synevi_network" }
synevi_persistence = {path = "../synevi_persistence"}
synevi_core = {path = "../synevi_core"}
synevi_types = {path = "../synevi_types"}
async-trait = "0.1.80"
tokio = {workspace = true}
thiserror = "1.0.61"
serde ={workspace = true}
serde_json = {workspace = true}
