[package]
name = "synevi_network"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = "0.13.0"
tokio = {workspace = true}
tonic = {workspace = true}
tonic-build = "0.12.0"
diesel-ulid = {workspace = true}
async-trait = {workspace = true}
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true}
synevi_types = { path = "../synevi_types" }

[build-dependencies]
tonic-build = "0.12.0"