[package]
name = "synevi_persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
monotime = { path = "../monotime" }
synevi_types = { path = "../synevi_types" }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
heed = "0.20.4"
chrono = "0.4.38"
diesel-ulid = { workspace = true }
futures = "0.3.30"
rusty_ulid = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
async-trait = { workspace = true }
thiserror = "1.0.61"
async-channel = "2.3.1"
ahash = { workspace = true }
sha3 = "0.10.8"
bincode = "1.3.3"
